decription alg added

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/lab1/Cypher.java=UTF-8
+encoding//src/lab1/Decypher.java=UTF-8
 encoding//src/lab1/FrequencyCounter.java=UTF-8
